# rpc-it-rs

./: .gitignore  Cargo.toml  README.md  SPEC.md  TODO.md
examples/: tcp.rs
macros/: Cargo.toml
macros/examples/: test.rs
macros/src/: gen_func.rs  gen_route.rs  lib.rs  type_util.rs
macros/tests/: compilation.rs  expand.rs  wip.rs
src/: broadcast.rs  codec.rs  codecs.rs  ext.rs  io.rs  lib.rs  macros.rs  raw.rs  rkyv_utils.rs  rpc.rs  service.rs  transport.rs  transports.rs
src/ext_codec/: jsonrpc.rs  mod.rs  msgpack_rpc.rs  rawrpc.rs
src/macros/: inbound.rs  mod.rs  route.rs
src/rpc/: builder.rs  core.rs  driver.rs  error.rs  inner.rs  mod.rs  msg.rs  receiver.rs  req.rs  req_rep.rs  sender.rs
tests/: all.rs  basic_api_jsonrpc.rs  basic_apis.rs  generated.rs  macro-compile.rs  macro.rs  macro_apis.rs  macro_rkyv.rs  macro_test.rs  macro_wip.rs  ops.rs  pocs.rs
tests/common/: mod.rs
tests/shared/: mod.rs
