[package]
name = "rpc-it"
version = "0.10.0"
edition = "2021"
repository = "https://github.com/kang-sw/rpc-it-rs"
authors = ["kang-sw <ki6080@gmail.com>"]
description = "RPC library for my own demand."
license = "MIT"
exclude = ["doc/"]

[workspace]
members = ["macros"]

# --------------------------------------------- Deps --------------------------------------------- #
[dependencies]
thiserror = "1"
serde = "1.0"
erased-serde = "0.4"
bytes = "1.4.0"
mpsc = { package = "async-channel", version = "2" }
parking_lot = "0.12.1"
hashbrown = "0.14.3"
futures = "0.3"
assert = { version = "1.1.0", package = "static_assertions" }

serde_json = { version = "1", optional = true, features = ["raw_value"] }
itoa = { version = "1.0", optional = true }
atoi = { version = "2.0", optional = true }

crossbeam-queue = { version = "0.3", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }


[features]
# Add JSONRPC support to the library
jsonrpc = ["dep:serde_json", "dep:itoa", "dep:atoi"]

# Add msgpack-rpc support to the library
msgpack-rpc = []

# Add msgpack-rpc as postcard support to the library
#
# This feature implements postcard serialization in msgpack-rpc scheme. See [https://github.com/msgpack-rpc/msgpack-rpc]
mspack-rpc-postcard = []

# Adds in-memory-io default IO support
in-memory-io = ["dep:crossbeam-queue"]
