[package]
name = "rpc-it"
version = "0.10.0-alpha.1"
edition = "2021"
repository = "https://github.com/kang-sw/rpc-it-rs"
authors = ["kang-sw <ki6080@gmail.com>"]
description = "RPC library for my own demand."
license = "MIT"
exclude = ["doc/"]

[workspace]
members = ["macros"]

# --------------------------------------------- Deps --------------------------------------------- #
[dependencies]
thiserror = "1"

serde = "1.0"

bytes = "1.4.0"
mpsc = { package = "async-channel", version = "2" }
parking_lot = "0.12.1"
hashbrown = "0.14.3"
futures = "0.3"
assert = { version = "1.1.0", package = "static_assertions" }

serde_json = { version = "1", optional = true, features = ["raw_value"] }
itoa = { version = "1.0", optional = true }
atoi = { version = "2.0", optional = true }

crossbeam-queue = { version = "0.3", optional = true }
anyhow = { version = "1.0.79", optional = true }

erased-serde = { version = "0.4", optional = true }

[dependencies.rpc-it-macros]
path = "./macros"
version = "0.10.0-alpha.1"
optional = true
default-features = false

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["proc-macro", "de-error-detail"]

# Enable full RPC support
full = [
	"jsonrpc",
	"msgpack-rpc",
	"dynamic-codec",
	"unstable-rawbyte-rpc",
	"in-memory-io",
]

# Enable dynamic codec support
dynamic-codec = ["dep:erased-serde"]

# Enable detailed error message for deserialization
#
# For servers, disabling this would be more benefitial as creating error object for every mismatched
# protocols would be pretty costly, which involves creating a new error object and serializing it
# everytime.
de-error-detail = ["dep:anyhow"]

# Enable proc-macro support
proc-macro = ["dep:rpc-it-macros"]

# Add JSONRPC support to the library
jsonrpc = ["dep:serde_json", "dep:itoa", "dep:atoi"]

# Add msgpack-rpc support to the library
msgpack-rpc = []

# This utilizes internal protocol, which isn't stable and backward-compatible between crate minor
# versions. Use this only if you're compiling both client and server with the same version of the
# crate.
unstable-rawbyte-rpc = []

# Adds in-memory-io default IO support
in-memory-io = ["dep:crossbeam-queue"]
