[package]
name = "rpc-it-macros"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/kang-sw/rpc-it-rs"
authors = ["kang-sw <ki6080@gmail.com>"]
description = "RPC library for my own demand."
license = "MIT"
exclude = ["doc/"]

[dependencies]
proc-macro2 = "1.0.66"
syn = "2.0.29"

[lib]
proc-macro = true
