[package]
name = "rpc-it-macros"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/kang-sw/rpc-it-rs"
authors = ["kang-sw <ki6080@gmail.com>"]
description = "RPC library for my own demand."
license = "MIT"
exclude = ["doc/"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
syn = { version = "2.0.29", features = ["full"] }

[lib]
proc-macro = true
